infra/k8s/appointment-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appointment-service

spec:
  replicas: 3

  selector:
    matchLabels:
      app: appointment-service

  template:
    metadata:
      labels:
        app: appointment-service

    spec:
      containers:
        - name: appointment-service

          image: appointment-service:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 4001
