infra/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: frontend:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 4173
