infra/k8s/appointment-service.yml
apiVersion: v1
kind: Service

metadata:
  name: appointment-service

spec:
  selector:
    app: appointment-service

  ports:
    - port: 4001
      targetPort: 4001
