infra/k8s/failover-services.yml
apiVersion: v1
kind: Service
metadata:
  name: failover-frontend
  namespace: default
spec:
  type: ExternalName
  externalName: frontend.aws-hospital.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: failover-backend
  namespace: default
spec:
  type: ExternalName
  externalName: backend.aws-hospital.svc.cluster.local
