infra/k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  selector:
    app: frontend

  ports:
    - port: 4173
      targetPort: 80
