infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hospital.local
        - api.hospital.local
      secretName: hospital-tls
  rules:
    - host: hospital.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: failover-frontend
                port:
                  number: 4173
    - host: api.hospital.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: failover-backend
                port:
                  number: 5000
